--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,8 @@ Version: 0.0.0.9000
 Authors@R: person("Eugene", "Ha", , "eha@posteo.de", c("aut", "cre"))
 Description: A quine is a non-empty computer program which takes no input and
   produces a copy of its own source code as its only output.
+Suggests: testthat
 License: MIT + file LICENSE
-ByteCompile: true
 Encoding: UTF-8
 RoxygenNote: 6.0.1.9000
 Roxygen: list(markdown = TRUE)
